--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,17 @@
 
 {% extends 'base.html' %}
 {% block content %}
-<h2>Welcome to the Employee Management System</h2>
+<div class="main-content">
+    <div class="left">
+             <h1>Management</h1>
+             <h2>Employee <span>System</span> </h2>
+             <h3>StaffSphere</h3>
+             <p><em>A complete ecosystem for employee management</em></p>
+    </div>
+    <div class="right">
+          <img src="../static/resources/image.png" alt="">
+    </div>
+</div>
 {% endblock %}
 
 
