--- a/static/css/style.css
+++ b/static/css/style.css
@@ -182,7 +182,7 @@ table tr:hover {
 
 select#Department {
     background-color: white; 
-    color:#2a708e  ;               
+    color: rgb(13, 9, 83);               
     font-weight: bold;     
     font-family: 'Arial', sans-serif; 
     padding: 10px;              
@@ -217,6 +217,20 @@ select#Department option {
   
 }
 
+.btn-delete {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    background-color: #e74c3c;
+    color: white;
+}
 
+.btn-delete:hover {
+    background-color: #c0392b;
+}
 
 
